
2022-10-19  Simon Sobisch <simonsobisch@gnu.org>

	* tree.h (struct cb_if): changed "is_if" integer flag to "enum
	  cob_statement statement" providing a clear context
	* tree.c (cb_build_if), tree.h, typeck.c, codegen.c (output_stmt):
	  pass and check matching statement entry instead of magic number
	* typeck.c (cb_emit_report_moves): refactored to combine conditions
	  and separate report_footing_flag
	* codegen.c (output_stmt): refactored to combine same code for
	  PRESENT WHEN field/line
	* codegen.c: set COBOL source and statement reference correctly for
	  SEARCH ... VARYING and WHEN - as the overhead from tracing code
	  preventing this before no longer exists
	* codegen.c: improved output of source position
	* typeck.c (cb_emit_evaluate): analysis and spec for necessary changes

2022-10-18  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (clear_local_codegen_vars): unset additional
	  "current" references, preventing use-after-free
	* codegen.c (output_stmt): set current_statement on start of
	  any statement generation allowing it to be used for context-checks
	* tree.h, parser.y: removed never-used cobc_printer_node
	* codegen.c (output_perform_call): use statement reference to generate
	  separate comment for PERFORM procedure or USE procedure
	* flag.def, codegen.c: new -fsection-exit-check
	  (cb_flag_section_exit_check) and -fimplicit-goback-check 
	  (cb_flag_implicit_goback_check)
	* tree.h (cb_progam), parser.y (perform_procedure): add and set
	   perform_thru_list for internal checks
	* typeck.c (cb_validate_perform_thru_ranges),
	  warning.def (cb_warn_suspicious_perform_thru): warning option to check
	  for PERFORM THRU referencing multiple sections and for its
	  references to be in non-chronological order

2022-10-17  Simon Sobisch <simonsobisch@gnu.org>

	* tree.h (cb_reference), tree.c (cb_build_reference): added statement
	  allowing every reference to be checked for its context